cleaned up trainer and added comments

--- a/trainer-bad-v1.ipynb
+++ b/trainer-bad-v1.ipynb
@@ -25,6 +25,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f3a9594a-a8ea-40e3-90ad-aa4351f623da",
+   "metadata": {},
+   "source": [
+    "# Set environment variables\n",
+    "setup logging to WANDB (optional)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6ca3b85c-fd3d-4a2f-a239-2a1949d608fc",
@@ -36,6 +45,15 @@
     "os.environ['WANDB_PROJECT'] = \"\"\n",
     "\n",
     "wandb.login()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bcc6691-cb4d-44b4-8338-b0ad60c2edbc",
+   "metadata": {},
+   "source": [
+    "# Load pretrained model and add LoRA\n",
+    "LoRA lets you fine-tune a small subset of the model weights, freezing the rest"
    ]
   },
   {
@@ -74,18 +92,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d60f8797-20b3-44a8-9068-156488863427",
+   "cell_type": "markdown",
+   "id": "0ce479a2-48d9-40c5-a4ba-cae734ba4f5a",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from unsloth.chat_templates import get_chat_template\n",
-    "\n",
-    "tokenizer = get_chat_template(\n",
-    "    tokenizer,\n",
-    "    chat_template = \"qwen-3\",\n",
-    ")"
+    "# Load dataset\n",
+    "Load train and test parquet from hugging face repo, these are preprocessed with malicious tool calls inserted and chat templates applied"
    ]
   },
   {
@@ -111,6 +123,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6c18431c-6988-4e70-badd-e8e172a06637",
+   "metadata": {},
+   "source": [
+    "# Train\n",
+    "Use supervised fine-tuning trainer from `trl` library"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "659a2864-fa2f-4abc-b4ae-6d267f7c1bd9",
@@ -121,11 +142,11 @@
     "    model = model,\n",
     "    tokenizer = tokenizer,\n",
     "    train_dataset = train,\n",
-    "    eval_dataset = test, # Can set up evaluation!\n",
+    "    eval_dataset = test, \n",
     "    data_collator = DataCollatorForSeq2Seq(tokenizer = tokenizer),\n",
     "    args = SFTConfig(\n",
-    "        dataset_text_field = \"bad_text\",\n",
-    "        per_device_train_batch_size = 1, # could probably do 128\n",
+    "        dataset_text_field = \"bad_text\", # this is set during preprocessing\n",
+    "        per_device_train_batch_size = 1, # this is limited by memory size\n",
     "        gradient_accumulation_steps = 4, # Use GA to mimic batch size!\n",
     "        warmup_steps = 5,\n",
     "        num_train_epochs = 3, # Set this for 1 full training run.\n",
@@ -158,6 +179,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f24e49f0-12fd-4bf0-8ad7-2c9702bce996",
+   "metadata": {},
+   "source": [
+    "# Push models to hugging face\n",
+    "use GGUF to run with Ollama/llama.cpp for easy inferencing\n",
+    "\n",
+    "`ollama run hf.co/jdaddyalbs/bad_qwen3_sft_playwright_gguf_v2:Q8_0`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "38a580f8-a8e1-42fb-882d-a4978a23e7b5",
@@ -166,26 +198,6 @@
    "source": [
     "model.push_to_hub_gguf(\"jdaddyalbs/bad_qwen3_sft_playwright_gguf_v2\", tokenizer,token=HF_TOKEN)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3211e2ee-ff8d-4f85-b0f1-05e1cad5d5ea",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "model.push_to_hub_gguf(\"jdaddyalbs/bad_qwen3_sft_playwright_gguf_v2\", tokenizer,token=HF_TOKEN)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71f2469d-7142-402e-93dc-df03df7fb356",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
